--- a/css/index.css
+++ b/css/index.css
@@ -504,6 +504,11 @@ Licence: <a href="http://www.templateonweb.com/terms.php?v=content&contentid=152
   padding-bottom: 50px;
 }
 
+#timer {
+  height: 30px;
+  background: #18191b;
+}
+
 .news_2 h2 {
   text-align: center;
   color: #fff;
@@ -902,7 +907,7 @@ Licence: <a href="http://www.templateonweb.com/terms.php?v=content&contentid=152
 
 @media (min-width:1210px) {
   #body_id {
-    background-size: cover !important ;
+    background-size: cover !important;
   }
 
 }
@@ -921,13 +926,14 @@ Licence: <a href="http://www.templateonweb.com/terms.php?v=content&contentid=152
   #center .fade-carousel {
     height: 50vh;
   }
-  .about_1 h1{
+
+  .about_1 h1 {
     font-size: 37px !important;
   }
 
-  
+
 }
 
-.sports_title{
+.sports_title {
   font-size: 37px !important;
 }
