--- a/css/blog.css
+++ b/css/blog.css
@@ -39,7 +39,7 @@ Licence: <a href="http://www.templateonweb.com/terms.php?v=content&contentid=152
 #blog{ 
  padding-top:30px;
  padding-bottom:30px;
- background-color:#000;
+ background-color:#fff;
  }
 .blog_2 h3{ 
  color: #fecb38;
