--- a/css/details.css
+++ b/css/details.css
@@ -45,7 +45,7 @@ body {
 #blog{ 
  padding-top:30px;
  padding-bottom:30px;
- background-color:#000;
+ background-color:#fff;
  }
 .blog_2 h3{ 
  color: #fecb38;
