--- a/css/element.css
+++ b/css/element.css
@@ -18,7 +18,7 @@
 transition:padding .3s;border:0}.navbar-default .navbar-brand{font-size:2em;-webkit-transition:all .3s;-moz-transition:all .3s;transition:all .3s}
 .navbar-default .navbar-nav>.active>a{border-radius:3px}
 .navbar-default.navbar-shrink{
-background-color:#991111!important;
+background-color:#0e055f!important;
 border-bottom: 2px solid #f9a01c!important;
 padding:10px 0
 }
