--- a/css/global.css
+++ b/css/global.css
@@ -329,7 +329,7 @@ section {}
 }
 
 .footer_1 li a {
-  color: #e0dfdf;
+  color: #0e055f;
   font-size: 16px;
   line-height: 30px;
 }
@@ -346,7 +346,7 @@ section {}
 }
 
 .footer_2 li {
-  color: #e0dfdf;
+  color: #0e055f;
   font-size: 16px;
   line-height: 33px;
 }
@@ -356,7 +356,7 @@ section {}
 }
 
 .footer_2 li a {
-  color: #e0dfdf;
+  color: #0e055f;
   font-size: 16px;
   line-height: 25px;
 }
