--- a/css/blog.css
+++ b/css/blog.css
@@ -73,7 +73,7 @@ Licence: <a href="http://www.templateonweb.com/terms.php?v=content&contentid=152
 .blog_2 li {
     display: inline;
     margin-right: 15px;
-    color: #fff;
+    color: #0e055f;
 }
 
 .blog_2 i {
